# fcitx-cjlite

./: CMakeLists.txt  PKGBUILD  README.md  cmake_uninstall.cmake.in  fcitx-cangjie.conf.in  fcitx-cangjie.txt  fcitx-cjlite.conf.in  fcitx-cjlite.txt
po/: CMakeLists.txt  POTFILES.in.in  fcitx-cangjie.pot  zh_CN.po  zh_HK.po
